--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.mntp.ui.main.MainActivity"
+            android:name="com.mntp.ui.main.KotlinMainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,11 +32,6 @@
         <meta-data
             android:name="design_height"
             android:value="1920" />
-
-        <activity android:name="com.mntp.ui.main.KotlinMainActivity" />
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
